[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/gui/pause_menu/pause_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="center_container" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 1 )]
margin_top = 247.0
margin_bottom = 472.0
rect_min_size = Vector2( 600, 225 )

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 205.0
custom_constants/separation = 20

[node name="title" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_right = 560.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "PAUSA"
align = 1
valign = 1

[node name="resume_game_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 75.0
margin_right = 560.0
margin_bottom = 125.0
text = "Volver al juego"

[node name="return_to_main_menu_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 135.0
margin_right = 560.0
margin_bottom = 185.0
text = "Men√∫ principal"

[node name="pause_button" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1269.0
margin_top = -60.0
margin_right = -1149.0
margin_bottom = -10.0
text = "Pausa"

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/resume_game_button" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/return_to_main_menu_button" to="." method="_on_return_to_main_menu_button_pressed"]
[connection signal="pressed" from="pause_button" to="." method="_on_restart_button_pressed"]
